api-gw/nginx/test-19/ns-sa-cm.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-19
