api-gw/nginx/test-19/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coffee-ingress
  namespace: test-19
  annotations:
    nginx.org/keepalive: "30"
spec:
  ingressClassName: nginx
  rules:
  - host: test19.example.com
    http:
      paths:
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: coffee-svc
            port:
              number: 80
